--- a/styles/main.css
+++ b/styles/main.css
@@ -37,6 +37,12 @@ p {
     font-size:1.1em;
 }
 
+ul {
+    color:white;
+    font-family:sans-serif;
+    font-size:1.1em;
+}
+
 button {
     background-color:rgba(0, 0, 0, 0);
     border-color:white;
