--- a/styles/main.css
+++ b/styles/main.css
@@ -1,17 +1,12 @@
 body {
     background-color:black;
-    background-image:url("../images/piano1double.jpg");
-    background-size:100%;
 
     color:white;
     font-family:sans-serif;
 
     width:100%;
     height:100%;
-
-    display:flex;
-    flex-direction:column;
-    align-items:center;
+    margin:0px;
 }
 
 h1 {
@@ -24,11 +19,6 @@ h2 {
     color:white;
     font-family:sans-serif;
     font-size:1.4em;
-}
-
-h3 {
-    font-family:sans-serif;
-    font-size:1.2em;
 }
 
 p {
@@ -59,6 +49,8 @@ img {
 
 a {
     color:aqua;
+    font-family:sans-serif;
+    font-size:1.3em;
 }
 
 a:hover {
